--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    android:id="@+id/profile_activity"
     android:background="@drawable/bb">
 
 
@@ -85,22 +88,12 @@
         app:layout_constraintStart_toStartOf="@+id/profile_page_phoneNumber"
         app:layout_constraintTop_toBottomOf="@+id/profile_page_phoneNumber" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        app:placeholderTextColor="@color/white"
-        android:id="@+id/login_page_gender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_bg"
-        app:layout_constraintEnd_toEndOf="@+id/profile_page_Email"
-        app:layout_constraintStart_toStartOf="@+id/profile_page_Email"
-        app:layout_constraintTop_toBottomOf="@+id/profile_page_Email">
 
-        <AutoCompleteTextView
+
+        <TextView
             android:id="@+id/profile_page_gender"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:drawablePadding="10dp"
             android:paddingLeft="20dp"
             android:drawableLeft="@drawable/ic_person"
@@ -110,10 +103,11 @@
             android:text="Gender"
             android:inputType="none"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"/>
-
-
-    </com.google.android.material.textfield.TextInputLayout>
+            android:textColorHint="@color/white"
+            android:background="@drawable/input_bg"
+            app:layout_constraintEnd_toEndOf="@+id/profile_page_Email"
+            app:layout_constraintStart_toStartOf="@+id/profile_page_Email"
+            app:layout_constraintTop_toBottomOf="@+id/profile_page_Email"/>
 
 
 
